Wed Oct 10 18:47:12 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/bczar/bczar.html:
          Package updates

Mon Oct  8 13:27:58 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/Sig_Handler.{cpp, inl}: Reverted change from:
          Fri Oct  5 23:09:40 UTC 2012  Steve Huston  <shuston@riverace.com>
          to initialize signal_handlers_ array. It's static so can't be
          changed all the time. Thanks to Johnny Willemsen for finding this.

Fri Oct  5 23:09:40 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/Sig_Handler.{cpp, inl}: Initialize signal_handlers_ array.

        * ace/WFMO_Reactor.cpp: Shut things down in close() and make all the
          info changes to avoid referencing unregistered handlers later, when
          they may be invalid. The lifetime can't be controlled via close() as
          it can via remove_handler() so be sure no references bleed out.

        * tests/Bug_2368_Regression_Test.cpp: Clean up text literals.

Thu Oct  4 10:24:52 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_icc.GNU:
          Added support for c++11 as feature

Wed Oct  3 09:59:08 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_icc.GNU:
          Added support for coverage which enabled code coverage with
          Intel C++

Thu Sep 27 06:30:22 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-g++-common.h:
          Introduced a new ACE_HAS_CPP11 which is set with GCC 4.7 at
          the moment the C++11 features are enabled

        * tests/Compiler_Features_15_Test.cpp:
        * tests/Compiler_Features_16_Test.cpp:
        * tests/Compiler_Features_17_Test.cpp:
        * tests/Compiler_Features_18_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Added some new compiler tests to validate the compiler C++11
          support
